--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -19,15 +19,26 @@
     <finalName>${project.artifactId}</finalName>
 
     <plugins>
+      <!-- Jetty Plugin -->
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
+      </plugin>
+
+      <!-- Compiler Plugin: Force Java 21 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <source>21</source>
+          <target>21</target>
+        </configuration>
       </plugin>
     </plugins>
   </build>
 
   <dependencies>
-
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
